fixed spacing and styles

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -7,3 +7,24 @@
         display: flex;
     }
 }
+
+/* @media (max-width: 768px) {
+    #about {
+        flex-direction: column; 
+        align-items: center; 
+    }
+
+    .about-containers {
+        width: 100%; 
+        padding: 0 1rem; 
+    }
+
+    #experience, #courses, #contact {
+        padding: 1rem; 
+        margin: 0; 
+    }
+
+    .experience-sub-title {
+        font-size: 1.5rem; 
+    }
+} */
