--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ a:hover {
 
 section {
     padding-top: 4vh;
-    height: 96vh;
+    height: 76vh;
     margin: 0 10rem;
     box-sizing: border-box;
     min-height: fit-content;
@@ -272,10 +272,12 @@ section {
 
 #about {
     position: relative;
+    gap: 2rem;
+    margin: 2rem;
 }
 
 .about-containers {
-    gap: 2rem;
+    gap: 1rem;
     margin-bottom: 2rem;
     margin-top: 2rem;
 }
@@ -325,12 +327,13 @@ section {
 
 #experience {
   position: relative;
+  padding-bottom: 1rem;
 }
 
 .experience-sub-title {
   color: rgb(85, 85, 85);
   font-weight: 600;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   margin-bottom: 2rem;
 }
 
@@ -366,11 +369,28 @@ article .icon {
 
 #courses {
     position: relative;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-.article-container p {
+.course-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.course-sub-title {
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+  }
+
+.article-container p,
+h3 {
     text-wrap: wrap;
 }
+
 
 /* Contact */
 
@@ -379,9 +399,9 @@ article .icon {
     justify-content: center;
     flex-direction: column;
     height: 70vh;
-}
-
-.contact-info-upper-container {
+  }
+  
+  .contact-info-upper-container {
     display: flex;
     justify-content: center;
     border-radius: 2rem;
@@ -390,21 +410,25 @@ article .icon {
     background: rgb(250, 250, 250);
     margin: 2rem auto;
     padding: 0.5rem;
-}
-
-.contact-info-container {
+  }
+  
+  .contact-info-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 0.5rem;
+    gap: 2rem;
     margin: 1rem;
-}
-
-.contact-info-container p {
+  }
+  
+  .contact-info-container p {
     font-size: larger;
-}
-
-.contact-icon {
+  }
+  
+  .contact-icon {
     cursor: default;
-}
+  }
+  
+  .email-icon {
+    height: 2.5rem;
+  }
 
